# matsuzawa-20260302

./: Dockerfile  pyproject.toml
.research/: research_history.json
config/: config.yaml
config/run/: comparative-1-llama3-8b-gsm8k.yaml  proposed-llama3-8b-gsm8k-tau1-b4.yaml  proposed-llama3-8b-gsm8k-tau1-b6.yaml  proposed-llama3-8b-gsm8k-tau1-b8.yaml  proposed-llama3-8b-gsm8k-tau2-b4.yaml  proposed-llama3-8b-gsm8k-tau2-b6.yaml  proposed-llama3-8b-gsm8k-tau2-b8.yaml
src/: evaluate.py  inference.py  main.py  model.py  preprocess.py  train.py
