[project]
name = "cdp-cot-experiment"
version = "0.1.0"
description = "Confidence-Calibrated Dual-Pass Chain-of-Thought experiment on GSM8K"
requires-python = ">=3.11"

dependencies = [
    # Core ML libraries
    "torch>=2.0.0",
    "transformers>=4.40.0",
    "datasets>=2.18.0",
    
    # Configuration and experiment management
    "hydra-core>=1.3.0",
    "omegaconf>=2.3.0",
    "wandb>=0.16.0",
    
    # Data processing and visualization
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    
    # Utilities
    "tqdm>=4.65.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []
